--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "cloudinary": "^1.37.3",
     "graphql": "^16.7.1",
+    "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
